--- a/code/ccf_tutorial_content.ipynb
+++ b/code/ccf_tutorial_content.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "f5476bdf",
    "metadata": {},
    "outputs": [],
@@ -195,6 +195,7 @@
     }
    ],
    "source": [
+    "# to do - change the axes labels to ap, ml, dv instead \n",
     "space = atlas.space\n",
     "f, axs = plt.subplots(1,3, figsize=(12, 3))\n",
     "for i, (plane, labels) in enumerate(zip(space.sections, space.axis_labels)):\n",
