Edited Workshop Notebook V2.ipynb

--- a/code/Workshop Notebook V2.ipynb
+++ b/code/Workshop Notebook V2.ipynb
@@ -24,13 +24,14 @@
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "    \n",
     "**Overview:** In this notebook, we will analyze the connectivity between thalamic subregions and the frontal cortex using a 3D light sheet microscopy dataset of whole mouse brains. \n",
-    "While this tutorial focuses on thalamic inputs to the frontal cortex, the dataset contains connections between the frontal cortex and other brain regions that have yet to be thoroughly explored.    \n",
+    "While this tutorial focuses on thalamocortical connectivity, the dataset contains connections between the frontal cortex and other brain regions, which have yet to be thoroughly explored. \n",
     "    \n",
     "**Dataset:**  \n",
     "    \n",
-    "**Experiment:** Retrograde viruses were injected into frontal cortex to induce the expression of nuclear-localized fluorophores in host cells in frontal cortex and their presynaptic partners across the brain. Each brain received 1-3 viral injections, resulting in multiple color channels highlighting different connections. Whole brains were imaged using a light sheet microscope (SmartSPIM). \n",
+    "**Experiment:** Retrograde viruses were injected into frontal cortex, inducing the expression of nuclear-localized fluorophores in host cells in frontal cortex and their presynaptic partners across the brain. Each brain received 1-3 viral injections in different locations in frontal cortex that express different fluorophores. As a result, each brain dataset is multiplexed and contains multiple image channels. Whole brains were imaged using a light sheet microscope (SmartSPIM). \n",
     "    \n",
-    "**Image Processing:** The image tiles were stitched together into a 3D volume then transformed into a reference brain template called the Common Coordinate Framework (CCF). A cell detection model was applied to the images, yielding spatial coordinates for each detected cell. *Note that the cell detection model was optimized for the thalamus.  \n",
+    "**Image Processing:** The image tiles were stitched together into a 3D volume then transformed into a reference brain template called the Common Coordinate Framework (CCF). Cells were automatically detected and subsequently run through a classifier to remove false positives, yielding spatial coordinates for detected cells. The spatial coordinates were then transformed into CCF space. *Note that the cell detection model was optimized for the thalamus. \n",
+    "\n",
     "        \n",
     "**Goal:** This tutorial will show you how to:  \n",
     "    1. analyze connectivity across brain regions  \n",
@@ -45,14 +46,14 @@
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "\n",
-    "#### Section 1: Import packages and load data<br>\n",
+    "#### Import packages and load data<br>\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b1f94bd0-8928-4a05-8079-2aa84a3ac300",
    "metadata": {
     "tags": []
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "531bb4ba-851d-45a7-8a5e-a0eeab22b67c",
    "metadata": {},
    "outputs": [],
@@ -154,17 +155,17 @@
     "\n",
     "#### Load data for a single brain \n",
     "      \n",
-    "load_data will pull the relevant data from the files for a given mouse ID.  \n",
+    "load_data will pull the relevant data from the /data folders for a given mouse ID.  \n",
     "\n",
     "Here, you can see which channels went through each stage of processing.  \n",
-    "(raw image channels > cell segmentation model applied > transformation to CCF space)\n",
+    "(raw image channels > cell detection model applied > transformation to CCF space)\n",
     "    \n",
     "(to do - write docstrings for load_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f23b1971",
    "metadata": {
     "tags": []
@@ -188,14 +189,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b724583",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "2150fe2b",
    "metadata": {},
@@ -207,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8638162d",
    "metadata": {},
    "outputs": [
@@ -261,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8d80df5d",
    "metadata": {
     "scrolled": true,
@@ -292,7 +285,7 @@
     "\n",
     "# note that these slices are not transformed to CCF \n",
     "# question about difference between the section and index output here \n",
-    "# units here are pixels \n"
+    "# to do - attach units to the function (pixels) \n"
    ]
   },
   {
@@ -308,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0e76b6d2",
    "metadata": {},
    "outputs": [
@@ -318,7 +311,7 @@
        "1282"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,18 +376,24 @@
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "\n",
-    "We can use this dataset to map the mesoscale connectivity between the frontal cortex and their presynaptic inputs. To do this, we need to quantify the number of targeted cells and their locations in the 3D volume. Classifying the cells across the dataset is a large task, especially at the whole brain scale. To aid in reducing manual classification, a custom cell detection model was applied to the dataset. Note that this project is focused on mapping thalamocortical connections, so the model was specifically optimized for the thalamus. The rest of this tutorial will show you how to extract and analyze the outputs from the cell detection model, focused on the cells in the thalamus. These tools are generalizable however, and can be fit for exploring other brain areas. \n",
-    "    \n",
+    "With this dataset, we can map the inputs to the frontal cortex. First, we need to quantify the number of targeted cells and which brain region each cell is in. Classifying the cells is a large task, especially at the whole brain scale. To aid in reducing manual classification, a custom cell detection model was applied to the dataset, yielding spatial coordinates of detected cells. Note that this project is focused on mapping thalamocortical connections and the cell detection model was optimized for the thalamus. The rest of this tutorial will show how to extract and analyze the outputs from the cell detection model, focused on the cells in the thalamus. These tools are generalizable, however, and can be used to analyze cells in other brain areas. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e452b90",
+   "metadata": {},
+   "source": [
+    "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "\n",
     "The `getCellsCCFdf` function loads the spatial coordinates of the detected cells in a given channel. Note that these coordinates are transformed into CCF space. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "922a97c8",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -424,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1b38b213",
    "metadata": {},
    "outputs": [
@@ -555,13 +554,14 @@
        "[536463 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# note that coordinate units are microns \n",
+    "# note that the outputs here are in microns and transformed to CCF space \n",
+    "\n",
     "cellLocs = x.getCellsCCFdf([\"445\", \"488\", \"561\"])\n",
     "cellLocs"
    ]
@@ -685,22 +685,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "73bfc569",
    "metadata": {},
    "outputs": [],
    "source": [
     "brain_region = [] \n",
     "\n",
-    "for _, cell in cellLocs.iterrows(): # iterate through each coordinate in the df, ignoring the index \n",
-    "    brain_region.append(atlas.structure_from_coords([ cell['AP'], cell['DV'], cell['ML'] ], as_acronym = True)) # find the brain structure \n",
+    "# iterate through each coordinate in the df, ignoring the index \n",
+    "for _, cell in cellLocs.iterrows(): \n",
+    "    # match the brain structure \n",
+    "    brain_region.append(atlas.structure_from_coords([ cell['AP'], cell['DV'], cell['ML'] ], as_acronym = True)) \n",
     "    \n",
     "cellLocs['brain_region'] = brain_region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "781ce5b6",
    "metadata": {},
    "outputs": [
@@ -843,7 +845,7 @@
        "[536463 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,12 +861,12 @@
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "\n",
-    "Note that the cell detection model is optimized for the thalamus - other brain areas have not gone through QC checks yet. Let's narrow our focus to the targeted cells in the thalamic subregions. "
+    "Note that the cell detection model is optimized for the thalamus - other brain areas have not gone through QC checks yet. Let's narrow our focus to thalamic subregions. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "42debeab",
    "metadata": {},
    "outputs": [
@@ -946,7 +948,7 @@
        "561            3    3   3    0  132  299"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +960,7 @@
     "# filter the df for cells within the roiList \n",
     "filtered_cellLocs = cellLocs[cellLocs[\"brain_region\"].isin(roiList)] \n",
     "\n",
-    "# generate connectivity matrix where: \n",
+    "# generate connectivity matrix: \n",
     "# rows = channels \n",
     "# columns = thalamus brain regions \n",
     "# values = cell counts \n",
@@ -972,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6841eb6e",
    "metadata": {},
    "outputs": [
@@ -998,6 +1000,16 @@
     "plt.xlabel(\"Brain Regions\")\n",
     "plt.ylabel(\"Channels\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b1c553c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to do - add follow up questions here "
    ]
   },
   {
@@ -1132,7 +1144,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
+   "id": "49c674a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>brain_region</th>\n",
+       "      <th>CM</th>\n",
+       "      <th>IAD</th>\n",
+       "      <th>MD</th>\n",
+       "      <th>PCN</th>\n",
+       "      <th>PT</th>\n",
+       "      <th>PVT</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>channel</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>488</th>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>107</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>561</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>132</td>\n",
+       "      <td>299</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "brain_region  CM  IAD  MD  PCN   PT  PVT\n",
+       "channel                                 \n",
+       "445            0    1   0    1   16    6\n",
+       "488            0    8   3    2  107  101\n",
+       "561            3    3   3    0  132  299"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4cc6cd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the all the colors the same but adjust the alpha based on the cell counts \n",
+    "alpha: 0 = transparent, 1 = opaque \n",
+    "need to rescale the cell counts within channel 0-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "43b17b82",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1261,7 @@
     "mask_combined[mask_combined > 0] = 1  # Initialize root mask with a base value (1)\n",
     "\n",
     "# Assign unique values to each ROI and add them to the combined mask\n",
-    "for i, roi in enumerate(roiList, start=2):  # Start at 2 to avoid overwriting the root\n",
+    "for i, roi in enumerate(roiList, start = 2):  # Start at 2 to avoid overwriting the root\n",
     "    roi_mask = atlas.get_structure_mask(roi)\n",
     "    roi_mask[roi_mask > 0] = i  # Assign a unique value based on index\n",
     "    mask_combined += roi_mask  # Combine the masks\n"
@@ -1152,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "fe265795",
    "metadata": {},
    "outputs": [
@@ -1174,8 +1291,16 @@
     "    axs[i].imshow(mask_combined.max(i), cmap=\"gray\")\n",
     "    axs[i].set_title(f\"{plane.capitalize()} view\")\n",
     "    axs[i].set_ylabel(labels[0])\n",
-    "    axs[i].set_xlabel(labels[1])"
+    "    axs[i].set_xlabel(labels[1])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79514b44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
