--- a/code/metadata.ipynb
+++ b/code/metadata.ipynb
@@ -94,7 +94,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
+   "id": "f2f8296e-381e-4a2d-9594-583ba4cc5a37",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "virus_dict = {}\n",
+    "virus_dict['AAVrg-Syn-H2B-Turquoise']='445'\n",
+    "virus_dict['AAVrg-Syn-H2B-EGFP']='488'\n",
+    "virus_dict['AAVrg-Syn-H2B-tdTomato']='561'\n",
+    "virus_dict['AAVrg-Syn-iCre']='488'\n",
+    "virus_dict['AAVrg-Syn-Flpo']='561'\n",
+    "virus_dict['CVS N2cdG-H2B-GFP']='488'\n",
+    "virus_dict['CVS N2cdG-H2B-tdTomato']='561'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "daff6351-4607-4251-8911-cd62cffc7a57",
    "metadata": {
     "tags": []
@@ -120,12 +139,12 @@
     "                else:\n",
     "                    titer = np.nan\n",
     "                df.loc[len(df)] = [name, subject_id, genotype, sex, virus, titer, ap, ml, dv, volume]\n",
-    "                "
+    "df[\"channel\"] = df[\"virus\"].map(virus_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "285d5c7e-0a99-4f70-8b11-d98035e66761",
    "metadata": {
     "tags": []
@@ -162,6 +181,7 @@
        "      <th>ml</th>\n",
        "      <th>dv</th>\n",
        "      <th>volume</th>\n",
+       "      <th>channel</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -177,6 +197,7 @@
        "      <td>1.80</td>\n",
        "      <td>1.00</td>\n",
        "      <td>50.0</td>\n",
+       "      <td>445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -190,6 +211,7 @@
        "      <td>1.80</td>\n",
        "      <td>0.80</td>\n",
        "      <td>50.0</td>\n",
+       "      <td>561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -203,6 +225,7 @@
        "      <td>0.20</td>\n",
        "      <td>2.00</td>\n",
        "      <td>50.0</td>\n",
+       "      <td>445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -216,6 +239,7 @@
        "      <td>0.60</td>\n",
        "      <td>0.60</td>\n",
        "      <td>50.0</td>\n",
+       "      <td>561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -229,9 +253,11 @@
        "      <td>1.00</td>\n",
        "      <td>1.20</td>\n",
        "      <td>50.0</td>\n",
+       "      <td>445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -255,6 +281,7 @@
        "      <td>1.15</td>\n",
        "      <td>3.35</td>\n",
        "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>626</th>\n",
@@ -268,6 +295,7 @@
        "      <td>0.35</td>\n",
        "      <td>2.10</td>\n",
        "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>627</th>\n",
@@ -281,6 +309,7 @@
        "      <td>0.35</td>\n",
        "      <td>2.10</td>\n",
        "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>628</th>\n",
@@ -294,6 +323,7 @@
        "      <td>2.90</td>\n",
        "      <td>3.60</td>\n",
        "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>629</th>\n",
@@ -307,10 +337,11 @@
        "      <td>2.90</td>\n",
        "      <td>3.60</td>\n",
        "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>630 rows × 10 columns</p>\n",
+       "<p>630 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -340,23 +371,23 @@
        "628    Male  AAV-Syn-DIO-TVA66T-dTomato-CVS N2cG            None -0.60  2.90   \n",
        "629    Male             EnvA CVS-N2C-histone-GFP            None -0.60  2.90   \n",
        "\n",
-       "       dv  volume  \n",
-       "0    1.00    50.0  \n",
-       "1    0.80    50.0  \n",
-       "2    2.00    50.0  \n",
-       "3    0.60    50.0  \n",
-       "4    1.20    50.0  \n",
-       "..    ...     ...  \n",
-       "625  3.35   200.0  \n",
-       "626  2.10   200.0  \n",
-       "627  2.10   200.0  \n",
-       "628  3.60   200.0  \n",
-       "629  3.60   200.0  \n",
+       "       dv  volume channel  \n",
+       "0    1.00    50.0     445  \n",
+       "1    0.80    50.0     561  \n",
+       "2    2.00    50.0     445  \n",
+       "3    0.60    50.0     561  \n",
+       "4    1.20    50.0     445  \n",
+       "..    ...     ...     ...  \n",
+       "625  3.35   200.0     NaN  \n",
+       "626  2.10   200.0     NaN  \n",
+       "627  2.10   200.0     NaN  \n",
+       "628  3.60   200.0     NaN  \n",
+       "629  3.60   200.0     NaN  \n",
        "\n",
-       "[630 rows x 10 columns]"
+       "[630 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
