Changes in 7 files

--- a/code/Workshop Notebook V2.ipynb
+++ b/code/Workshop Notebook V2.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b1f94bd0-8928-4a05-8079-2aa84a3ac300",
    "metadata": {
     "tags": []
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "531bb4ba-851d-45a7-8a5e-a0eeab22b67c",
    "metadata": {
     "tags": []
@@ -167,9 +167,7 @@
     "The load_data object class is a wrapper for pulling relevant lightsheet data and data products from the /data folders for a given mouse ID.  \n",
     "\n",
     "Here, you can see which channels went through each stage of processing.  \n",
-    "(raw image channels > cell detection model applied > transformation to CCF space)\n",
-    "    \n",
-    "(to do - write docstrings for load_data)\n"
+    "(raw image channels > cell detection model applied > transformation to CCF space)\n"
    ]
   },
   {
@@ -506,14 +504,6 @@
     "# Otherwise the data will take ages to plot, if the kernel doesn't crash first!\n",
     "x.plotSlice(ch = \"561\", plane = \"coronal\", level = 1, section = [], extent = extent) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb24758a-35be-4350-bfd8-b86ed9184ef3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1849,12 +1839,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e49948bf",
+   "cell_type": "markdown",
+   "id": "3d1d21cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Questions to explore further: \n",
+    "\n",
+    "metadata - can you predict x metadata from y measurement? (e.g. predict injection coordinates from labelled structures) \n",
+    "\n",
+    "tropism - do viruses matter? variability in targeted expression across injection sites \n",
+    "\n",
+    "what is the topography of labelling? \n",
+    "\n",
+    "focus on other parts of brain outside of thalamus (amygdala, cortex, neuromodulatory areas (LC, note that CCF registration bad here)) \n",
+    "\n",
+    "data driven parcellations (NMF, etc...) \n",
+    "\n",
+    "to do: ask Ulises to write some questions \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
