--- a/code/metadata.ipynb
+++ b/code/metadata.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "53daa5d2-c780-479a-aedf-488f1e76eff2",
    "metadata": {
     "tags": []
@@ -115,7 +115,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "id": "f2f8296e-381e-4a2d-9594-583ba4cc5a37",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "virus_dict = {}\n",
+    "virus_dict['AAVrg-Syn-H2B-Turquoise']='445'\n",
+    "virus_dict['AAVrg-Syn-H2B-EGFP']='488'\n",
+    "virus_dict['AAVrg-Syn-H2B-tdTomato']='561'\n",
+    "virus_dict['AAVrg-Syn-iCre']='488'\n",
+    "virus_dict['AAVrg-Syn-Flpo']='561'\n",
+    "virus_dict['CVS N2cdG-H2B-GFP']='488'\n",
+    "virus_dict['CVS N2cdG-H2B-tdTomato']='561'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "1c0af30f-f1e9-4f24-8302-399c3590ee2b",
    "metadata": {
     "tags": []
@@ -167,352 +186,6 @@
     "                    age = (surgery_date - dob).days\n",
     "                    days_to_perfusion = (perfusion_date - surgery_date).days\n",
     "                    df.loc[len(df)] = [name, subject_id, genotype, sex, virus, titer, ap, ml, dv, volume, age, days_to_perfusion, qc_tissue, qc_channel, ng_link, channel]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f2f8296e-381e-4a2d-9594-583ba4cc5a37",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "virus_dict = {}\n",
-    "virus_dict['AAVrg-Syn-H2B-Turquoise']='445'\n",
-    "virus_dict['AAVrg-Syn-H2B-EGFP']='488'\n",
-    "virus_dict['AAVrg-Syn-H2B-tdTomato']='561'\n",
-    "virus_dict['AAVrg-Syn-iCre']='488'\n",
-    "virus_dict['AAVrg-Syn-Flpo']='561'\n",
-    "virus_dict['CVS N2cdG-H2B-GFP']='488'\n",
-    "virus_dict['CVS N2cdG-H2B-tdTomato']='561'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "285d5c7e-0a99-4f70-8b11-d98035e66761",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>genotype</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>virus</th>\n",
-       "      <th>titer</th>\n",
-       "      <th>ap</th>\n",
-       "      <th>ml</th>\n",
-       "      <th>dv</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>age_days</th>\n",
-       "      <th>days_to_perfusion</th>\n",
-       "      <th>qc_tissue_quality</th>\n",
-       "      <th>qc_channel</th>\n",
-       "      <th>ng_link</th>\n",
-       "      <th>channel</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SmartSPIM_678704_2023-06-20_20-49-52_stitched_...</td>\n",
-       "      <td>678704</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>AAVrg-Syn-H2B-Turquoise</td>\n",
-       "      <td>48000000000000</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>SmartSPIM_678704_2023-06-20_20-49-52_stitched_...</td>\n",
-       "      <td>678704</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>AAVrg-Syn-H2B-tdTomato</td>\n",
-       "      <td>51000000000000</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>Pending</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SmartSPIM_678703_2023-06-20_17-18-27_stitched_...</td>\n",
-       "      <td>678703</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>AAVrg-Syn-H2B-Turquoise</td>\n",
-       "      <td>48000000000000</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>Pending</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>SmartSPIM_678703_2023-06-20_17-18-27_stitched_...</td>\n",
-       "      <td>678703</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>AAVrg-Syn-H2B-tdTomato</td>\n",
-       "      <td>51000000000000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>Pending</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SmartSPIM_678706_2023-06-28_16-43-04_stitched_...</td>\n",
-       "      <td>678706</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AAVrg-Syn-H2B-Turquoise</td>\n",
-       "      <td>48000000000000</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>SmartSPIM_677731_2023-06-23_20-17-12_stitched_...</td>\n",
-       "      <td>677731</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AAVrg-Syn-H2B-Turquoise</td>\n",
-       "      <td>48000000000000</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>27</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>Pending</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>SmartSPIM_677731_2023-06-23_20-17-12_stitched_...</td>\n",
-       "      <td>677731</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AAVrg-Syn-H2B-tdTomato</td>\n",
-       "      <td>51000000000000</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>27</td>\n",
-       "      <td>Fail</td>\n",
-       "      <td>Pending</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>SmartSPIM_691387_2023-09-15_20-47-51_stitched_...</td>\n",
-       "      <td>691387</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AAVrg-Syn-H2B-Turquoise</td>\n",
-       "      <td>296000000000000</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Pass</td>\n",
-       "      <td>Pass</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>SmartSPIM_691387_2023-09-15_20-47-51_stitched_...</td>\n",
-       "      <td>691387</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AAVrg-Syn-H2B-tdTomato</td>\n",
-       "      <td>51000000000000</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Pass</td>\n",
-       "      <td>Pass</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>SmartSPIM_691387_2023-09-15_20-47-51_stitched_...</td>\n",
-       "      <td>691387</td>\n",
-       "      <td>wt/wt</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>AAVrg-Syn-H2B-EGFP</td>\n",
-       "      <td>136000000000000</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Pass</td>\n",
-       "      <td>Pass</td>\n",
-       "      <td>https://aind-neuroglancer-sauujisjxq-uw.a.run....</td>\n",
-       "      <td>488</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>153 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  name subject_id genotype  \\\n",
-       "0    SmartSPIM_678704_2023-06-20_20-49-52_stitched_...     678704    wt/wt   \n",
-       "1    SmartSPIM_678704_2023-06-20_20-49-52_stitched_...     678704    wt/wt   \n",
-       "2    SmartSPIM_678703_2023-06-20_17-18-27_stitched_...     678703    wt/wt   \n",
-       "3    SmartSPIM_678703_2023-06-20_17-18-27_stitched_...     678703    wt/wt   \n",
-       "4    SmartSPIM_678706_2023-06-28_16-43-04_stitched_...     678706    wt/wt   \n",
-       "..                                                 ...        ...      ...   \n",
-       "148  SmartSPIM_677731_2023-06-23_20-17-12_stitched_...     677731    wt/wt   \n",
-       "149  SmartSPIM_677731_2023-06-23_20-17-12_stitched_...     677731    wt/wt   \n",
-       "150  SmartSPIM_691387_2023-09-15_20-47-51_stitched_...     691387    wt/wt   \n",
-       "151  SmartSPIM_691387_2023-09-15_20-47-51_stitched_...     691387    wt/wt   \n",
-       "152  SmartSPIM_691387_2023-09-15_20-47-51_stitched_...     691387    wt/wt   \n",
-       "\n",
-       "        sex                    virus            titer   ap   ml   dv  volume  \\\n",
-       "0      Male  AAVrg-Syn-H2B-Turquoise   48000000000000  2.8  1.8  1.0    50.0   \n",
-       "1      Male   AAVrg-Syn-H2B-tdTomato   51000000000000  2.4  1.8  0.8    50.0   \n",
-       "2      Male  AAVrg-Syn-H2B-Turquoise   48000000000000  1.6  0.2  2.0    50.0   \n",
-       "3      Male   AAVrg-Syn-H2B-tdTomato   51000000000000  2.0  0.6  0.6    50.0   \n",
-       "4    Female  AAVrg-Syn-H2B-Turquoise   48000000000000  2.8  1.0  1.2    50.0   \n",
-       "..      ...                      ...              ...  ...  ...  ...     ...   \n",
-       "148  Female  AAVrg-Syn-H2B-Turquoise   48000000000000  2.0  0.2  1.0    50.0   \n",
-       "149  Female   AAVrg-Syn-H2B-tdTomato   51000000000000  2.4  0.2  1.0    50.0   \n",
-       "150  Female  AAVrg-Syn-H2B-Turquoise  296000000000000  2.8  1.0  1.2    50.0   \n",
-       "151  Female   AAVrg-Syn-H2B-tdTomato   51000000000000  2.8  1.8  1.0    50.0   \n",
-       "152  Female       AAVrg-Syn-H2B-EGFP  136000000000000  2.8  1.4  1.0    50.0   \n",
-       "\n",
-       "     age_days  days_to_perfusion qc_tissue_quality qc_channel  \\\n",
-       "0          45                 28              Fail       Fail   \n",
-       "1          45                 28              Fail    Pending   \n",
-       "2          45                 28              Fail    Pending   \n",
-       "3          45                 28              Fail    Pending   \n",
-       "4          45                 28              Fail       Fail   \n",
-       "..        ...                ...               ...        ...   \n",
-       "148        45                 27              Fail    Pending   \n",
-       "149        45                 27              Fail    Pending   \n",
-       "150        45                 28              Pass       Pass   \n",
-       "151        45                 28              Pass       Pass   \n",
-       "152        45                 28              Pass       Pass   \n",
-       "\n",
-       "                                               ng_link channel  \n",
-       "0    https://aind-neuroglancer-sauujisjxq-uw.a.run....     445  \n",
-       "1    https://aind-neuroglancer-sauujisjxq-uw.a.run....     561  \n",
-       "2    https://aind-neuroglancer-sauujisjxq-uw.a.run....     445  \n",
-       "3    https://aind-neuroglancer-sauujisjxq-uw.a.run....     561  \n",
-       "4    https://aind-neuroglancer-sauujisjxq-uw.a.run....     445  \n",
-       "..                                                 ...     ...  \n",
-       "148  https://aind-neuroglancer-sauujisjxq-uw.a.run....     445  \n",
-       "149  https://aind-neuroglancer-sauujisjxq-uw.a.run....     561  \n",
-       "150  https://aind-neuroglancer-sauujisjxq-uw.a.run....     445  \n",
-       "151  https://aind-neuroglancer-sauujisjxq-uw.a.run....     561  \n",
-       "152  https://aind-neuroglancer-sauujisjxq-uw.a.run....     488  \n",
-       "\n",
-       "[153 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
@@ -1094,6 +767,18 @@
    ],
    "source": [
     "df[df.genotype.str.contains('Ai224')].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "60bea29c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exporting metadata df as a csv \n",
+    "\n",
+    "df.to_csv('/data/metadata.csv')"
    ]
   },
   {
